multimedia/jellyfin/templates/sonar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        volumeMounts:
        - name: config
          mountPath: /config
        - name: medias
          mountPath: /tv
        - name: downloads
          mountPath: /downloads
        ports:
        - containerPort: 8989
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: medias
        persistentVolumeClaim:
          claimName: jellyfin-media
      - name: downloads
        persistentVolumeClaim:
          claimName: qbitt-download
