multimedia/jellyfin/templates/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    # external-dns.alpha.kubernetes.io/target: router.csepulveda.net
  name: jellyfin
  namespace: multimedia
spec:
  ingressClassName: cilium
  rules:
  - host: jellyfin.csepulveda.net
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              number: 8096
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jellyfin.csepulveda.net
    secretName: jellyfin.csepulveda.net-tls
# ---
# apiVersion: cilium.io/v2
# kind: CiliumNetworkPolicy
# metadata:
#   name: allow-jellyfin-from-home
#   namespace: multimedia
# spec:
#   endpointSelector:
#     matchLabels:
#       app.kubernetes.io/name: jellyfin
#   ingress:
#   - fromCIDR:
#       - 192.168.100.0/24
#     toPorts:
#     - ports:
#       - port: "8096"
#         protocol: TCP
