multimedia/jellyfin/templates/jackett.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: multimedia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: linuxserver/jackett
        volumeMounts:
        - name: config
          mountPath: /config
        ports:
        - containerPort: 9117
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jackett-config
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: multimedia
spec:
  selector:
    app: jackett
  ports:
  - protocol: TCP
    port: 9117
    targetPort: 9117
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: jackett
  namespace: multimedia
spec:
  ingressClassName: nginx
  rules:
  - host: jackett.csepulveda.net
    http:
      paths:
      - backend:
          service:
            name: jackett
            port:
              number: 9117
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jackett.csepulveda.net
    secretName: jackett.csepulveda.net-tls
