multimedia/jellyfin/templates/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: multimedia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr
        volumeMounts:
        - name: config
          mountPath: /config
        - name: videos
          mountPath: /movies
        - name: downloads
          mountPath: /downloads
        ports:
        - containerPort: 7878
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: videos
        persistentVolumeClaim:
          claimName: jellyfin-media
      - name: downloads
        persistentVolumeClaim:
          claimName: qbitt-download
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: multimedia
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 7878
  selector:
    app: radarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: radarr
  namespace: multimedia
spec:
  ingressClassName: nginx
  rules:
  - host: radarr.csepulveda.net
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - radarr.csepulveda.net
    secretName: radarr.csepulveda.net-tls
