multimedia/jellyfin/templates/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: multimedia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        volumeMounts:
        - name: config
          mountPath: /config
        - name: medias
          mountPath: /tv
        - name: downloads
          mountPath: /downloads
        ports:
        - containerPort: 8989
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: medias
        persistentVolumeClaim:
          claimName: jellyfin-media
      - name: downloads
        persistentVolumeClaim:
          claimName: qbitt-download
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: multimedia
spec:
  ports:
    - port: 80
      targetPort: 8989
  selector:
    app: sonarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: sonarr
  namespace: multimedia
spec:
  ingressClassName: nginx
  rules:
  - host: sonarr.csepulveda.net
    http:
      paths:
      - backend:
          service:
            name: sonarr
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sonarr.csepulveda.net
    secretName: sonarr.csepulveda.net-tls
